# DFU_OTA

./: CMakeLists.txt  link.ld
Startup/: startup_CH573.S
include/: OTA_profile.h  OTA_service.h  crc.h  crypto_config.h  os_port_config.h  peripheral.h  sig_service.h  signature.h  user_config.h  user_settings.h
src/: OTA_profile.c  OTA_service.c  crc.c  main.c  peripheral.c  sig_service.c  signature.c
